Fixes the tags list on mobile.c

--- a/src/components/categories/categories.scss
+++ b/src/components/categories/categories.scss
@@ -2,14 +2,22 @@
 
 .categories {
   display: flex;
+  flex-direction: column;
   margin-bottom: 60px;
 
+  @include smallUp {
+    flex-direction: row;
+  }
+
   .taglist {
-    margin-right: 60px;
+    @include smallUp {
+      margin-right: 60px;
+    }
+  
 
     .label {
       font-weight: $semiBoldWeight;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .value {
@@ -19,14 +27,25 @@
         text-decoration: none;
         color: $whiteColor;
         margin-right: 5px;
+        margin-top: 5px;
         padding: 6px 12px;
         border-radius: 20px;
         background: $thirdColor;
+        display: inline-block;
 
         &:hover {
           background: $primaryColor;
         }
       }
+    }
+  }
+
+  .tags {
+    margin-top: 30px;
+    margin-right: 0;
+
+    @include smallUp {
+      margin-top: 0;
     }
   }
 }
